# book_managing

./: Dockerfile  README.md  books.csv  books.json  docker-compose.yml  env-example  pyproject.toml
src/: app.py  settings.py
src/db/: db_setup.py
src/db/common/: model.py
src/db/models/: models.py
src/db/models/author/: model.py  repository.py
src/db/models/book/: model.py  repository.py
src/db/models/user/: model.py  repository.py
src/db/singleton_tortoise/: db_singleton_creator.py  tortoise_config.py
src/routers/: depends.py  router.py
src/routers/auth/: router.py  schemas.py  security.py  services.py
src/routers/author/: router.py  schemas.py  services.py
src/routers/books/: router.py  schemas.py  services.py
src/tests/: test_endpoints.py
